gap fix

--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,7 @@ h1 {
 .filt {
     margin-top: 15px;
     margin-bottom: 15px;
+    margin-right: 5px;
 }
 
 .icon {
